--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,4 +1,4 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<p>Author: {{author}}</p>
-<p>Company: {{company}}</p>
+<p>Bienvenidos a:  {{title}}</p>
+<p>Colaboradores: {{author}}</p>
+<p>Compañia: {{company}}</p>
